# neuris-python

./: .gitignore  AGENT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/neuris/: __init__.py  client.py  eli.py  exceptions.py  models.py  pagination.py  transport.py
tests/: _refresh_fixtures.py  conftest.py  test_client.py  test_content_endpoints.py  test_eli.py  test_integration.py  test_models.py  test_pagination.py  test_transport.py
tests/fixtures/: administrative_directive_detail.json  case_law_detail.json  case_law_list.json  courts_list.json  legislation_list.json  legislation_list_page2.json  literature_detail.json  literature_list.json  statistics.json
