[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuris-python"
version = "0.1.0"
description = "Unofficial Python client for the NeuRIS API (testphase.rechtsinformationen.bund.de)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "pj0tr", email = "5drei1@proton.me" }]
keywords = ["neuris", "rechtsinformationen", "german-law", "api-client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27",
    "tenacity>=8.5",
]

[project.urls]
Homepage = "https://github.com/5drei1/neuris-python"
Repository = "https://github.com/5drei1/neuris-python"
Issues = "https://github.com/5drei1/neuris-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/neuris"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["live: mark test as requiring live NeuRIS API (NEURIS_LIVE=1)"]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PT", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src/neuris"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
